--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "vue3-perfect-scrollbar": "1.6.1",
     "vue3-toastify": "^0.1.14",
     "vuetify": "3.3.3",
+    "vuetify-pro-tiptap": "^2.3.0",
     "webfontloader": "1.6.28",
     "ziggy-js": "^1.6.0"
   },
