--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tabler/icons": "2.17.0",
     "@vueuse/core": "10.1.0",
     "@vueuse/math": "10.1.0",
+    "apexcharts-clevision": "^3.28.5",
     "axios": "1.4.0",
     "axios-mock-adapter": "1.21.4",
     "eslint-import-resolver-alias": "^1.1.2",
@@ -36,6 +37,7 @@
     "vue-i18n": "9.2.2",
     "vue-prism-component": "2.0.0",
     "vue-router": "4.1.6",
+    "vue3-apexcharts": "^1.4.4",
     "vue3-perfect-scrollbar": "1.6.1",
     "vue3-toastify": "^0.1.14",
     "vuetify": "3.3.3",
