--- a/.env.example
+++ b/.env.example
@@ -70,3 +70,8 @@ PAYPAL_LIVE_APP_ID=
 PAYPAL_PAYMENT_ACTION=
 PAYPAL_CURRENCY=
 PAYPAL_VALIDATE_SSL=
+
+
+AUTHORIZENET_API_LOGIN_ID=
+AUTHORIZENET_TRANSACTION_KEY=
+AUTHORIZENET_SANDBOX=
