--- a/.env.example
+++ b/.env.example
@@ -71,6 +71,8 @@ PAYPAL_PAYMENT_ACTION=
 PAYPAL_CURRENCY=
 PAYPAL_VALIDATE_SSL=
 
+PAYPAL_NOTIFY_URL=
+
 
 AUTHORIZENET_API_LOGIN_ID=
 AUTHORIZENET_TRANSACTION_KEY=
